Initial implementation of open modules